# ascii-faces-api

./: .gitignore  Cargo.toml  README.md
migrations/2020-09-01-094712_owo_faces/: down.sql  up.sql
migrations/2020-11-26-214530_accounts/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
