[package]
rust = "nightly-x86_64-pc-windows-gnu"
name = "ascii-owo-api"
version = "0.1.0"
authors = ["Tyler <tylersmaldonado@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Connection to MySQL
diesel = { version = "1.4.5", features = ["mysql"] }

# Rocket Webserver
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json", "diesel_mysql_pool"] }
rocket_codegen = "0.4.5"
rocket-client-addr = "0.4.5"

# Serialization/Deserialization
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"

# ETC
dotenv = "0.15.0"
unicode-segmentation = "1.6.0"
base64 = "0.13.0"
rand = "0.7.3"